Added registration and log-in

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -9,14 +9,14 @@
 <h2>Users</h2>
 <p><a href="/users">View all users</a></p>
 
-<h2>Registration Form</h2>
-    <h3>Provide an email address and password.</h3>
+<h2>Log In Form</h2>
+    <h3>You are already a member! Please provide your email address and password.</h3>
 
-<form action=submit method="POST">
+<form method="POST">
     <p>What is your email address?</p>
-        <textarea value="email"></textarea>
+        <textarea email="email"></textarea>
         <p>What is your password?</p>
-        <input type="password" value="password"></input>
+        <textarea password="password"></textarea>
     <button type"submit">Submit!</button>
 </form>
 
