--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -12,7 +12,7 @@
 <h2>Log In Form</h2>
     <h3>You are already a member! Please provide your email address and password.</h3>
 
-<form method="POST">
+<form action=/homepage_loggedin method="POST">
     <p>What is your email address?</p>
         <textarea email="email"></textarea>
         <p>What is your password?</p>
