--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Register as a user! </h1>
+<h1>You are not a current user! But you can become one </h1>
 
 <h2>Registration Form</h2>
-    <h3>Provide an age and zipcde.</h3>
+    <h3>Provide an age and zipcode. We already have your email and password that you provided</h3>
 
-<form method="POST">
+<form action=/homepageloggedin.html method="POST">
     <p>Your email address is: {{ email }}</p>
     <p>Your password is: ******** </p>
     <p>How old are you in years?</p>
