completed log in, partially fixed alert issue on registration for age and zipcode.

--- a/templates/homepageloggedin.html
+++ b/templates/homepageloggedin.html
@@ -13,4 +13,18 @@
 <h3>You are logged in. </h3>
 
 
+<button name="log_out" >Log Out</button>
+
+<script type="text/javascript">
+
+
+
+
+
+
+
+
+</script>
+
+
 {% endblock %}
