--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -12,11 +12,11 @@
 <h2>Log In Form</h2>
     <h3>You are already a member! Please provide your email address and password.</h3>
 
-<form action="/homepage_loggedin" method="POST">
+<form action="/homepageloggedin" method="POST">
     <p>What is your email address?</p>
-        <textarea email="email"></textarea>
+        <textarea name="email"></textarea>
         <p>What is your password?</p>
-        <textarea password="password"></textarea>
+        <input type="password" name="password"></input>
     <button type"submit">Submit!</button>
 </form>
 
